name:                RDWP
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Torajiro Aida
copyright:           2017 Torajiro Aida
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LibMain, Location, Index, Error404
  build-depends:       base >= 4.7 && < 5,
                       reflex,
                       reflex-dom,
                       random,
                       time,
                       mtl,
                       ghcjs-base
  default-language:    Haskell2010

executable RDWP-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       RDWP
  default-language:    Haskell2010
