name:           RDWP
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/aidatorajiro/RDWP#readme>
homepage:       https://github.com/aidatorajiro/RDWP#readme
bug-reports:    https://github.com/aidatorajiro/RDWP/issues
author:         Torajiro Aida
maintainer:     kawarusosu@zoho.com
copyright:      2018 Torajiro Aida
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/aidatorajiro/RDWP

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , bytestring
    , containers
    , file-embed
    , mtl
    , parsec
    , random
    , reflex
    , reflex-dom
    , text
    , time
  if impl(ghcjs)
    build-depends:
        ghcjs-base
  exposed-modules:
      Elements
      Error404
      FakeIndex
      Index
      LibMain
      Location
      Mensae
      Source
      Util
  other-modules:
      Paths_RDWP
  default-language: Haskell2010

executable RDWP-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      RDWP
    , base >=4.7 && <5
    , bytestring
    , containers
    , file-embed
    , mtl
    , parsec
    , random
    , reflex
    , reflex-dom
    , text
    , time
  if impl(ghcjs)
    build-depends:
        ghcjs-base
  other-modules:
      Paths_RDWP
  default-language: Haskell2010
