name:           RDWP
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/aidatorajiro/RDWP#readme>
homepage:       https://github.com/aidatorajiro/RDWP#readme
bug-reports:    https://github.com/aidatorajiro/RDWP/issues
author:         Torajiro Aida
maintainer:     kawarusosu@zoho.com
copyright:      2018 Torajiro Aida
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md
    dot.txt
    log.txt

source-repository head
  type: git
  location: https://github.com/aidatorajiro/RDWP

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , bytestring
    , containers
    , file-embed
    , jsaddle
    , matrix
    , mtl
    , parsec
    , raw-strings-qq
    , random
    , reflex
    , reflex-dom
    , text
    , time
    , ghcjs-dom
    , safe
    , transformers
    , extra
  if impl(ghcjs)
    build-depends:
        ghcjs-base
      , ghcjs-dom-jsffi
  exposed-modules:
      Elements
      Error404
      FakeIndex
      Index
      LibMain
      Mensae
      Source
      Util
      Nami
      Nazo
      Mn1
      Mn2
      Ars
      IClub
      Harituke
      Ubana
      Meteon
      Onsen
      Logg
      Miscode
      Dott
  other-modules:
      Paths_RDWP
  default-language: Haskell2010

executable RDWP-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options:
  build-depends:
      RDWP
    , base >=4.7 && <5
  if impl(ghcjs)
    build-depends:
        ghcjs-base
  other-modules:
      Paths_RDWP
  default-language: Haskell2010
